# patchbase

./: .bazelrc  .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  BUILD.bazel  CLA.md  MODULE.bazel  README.md  SECURITY.md  compose.test.yaml  compose.yaml  config.example.yaml  go.mod  go.sum  go.work  go.work.sum  tools.go  version.bzl
advisories/: BUILD.bazel  go.mod  sqlc.yaml
advisories/queries/: BUILD.bazel  queries.sql
advisories/schema/: schema.sql
advisories/sql/: BUILD.bazel  db.go  models.go  querier.go  queries.sql.go
agent/: BUILD.bazel  go.mod  go.sum
agent/cmd/patchbase-agent/: BUILD.bazel  main.go
agent/internal/cli/: BUILD.bazel  cli.go  enroll.go  sync.go  version.go
agent/internal/client/: BUILD.bazel  http.go  http_test.go  interface.go  types.go
agent/internal/collector/: BUILD.bazel  packages.go  packages_test.go  repos.go  repos_test.go  snapshot.go  snapshot_test.go  system.go  system_test.go
agent/internal/config/: BUILD.bazel  config.go  config_test.go
cmd/patchbase-server/: BUILD.bazel  main.go
dashboard/: BUILD.bazel  README.md  defs.bzl  embed.go  go.mod  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.d.ts  app.html
dashboard/src/lib/: format.ts  types.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/tools/: bazel_build.mjs
db/: BUILD.bazel  schema.sql  sqlc.yaml
db/fixtures/: BUILD.bazel  users.yml
db/queries/: advisories.sql  advisory_product_streams.sql  advisory_references.sql  affected_package_rules.sql  audit_log.sql  decision_records.sql  fixed_packages.sql  host_access_tokens.sql  host_snapshots.sql  host_ssh_pull_jobs.sql  hosts.sql  matcher.sql  product_streams.sql  registration_tokens.sql  settings.sql  users.sql
docker/: BUILD.bazel
docs/: .gitignore  .npmrc  BUILD.bazel  contributing.md  defs.bzl  docusaurus.config.ts  faq.md  introduction.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/api/: advisories.md  authentication.md  hosts.md  overview.md  websocket.md
docs/architecture/: advisory-database.md  agent-collector.md  matching-engine.md  overview.md
docs/cli/: agent.md  server.md
docs/configuration/: agent.md  server.md
docs/development/: building.md  dev-setup.md  frontend.md  migrations.md  protos.md  sqlc.md  testing.md
docs/guides/: advisory-sync.md  managing-hosts.md  notifications.md  scope-mappings.md  ssl-tls.md  vulnerability-matching.md
docs/installation/: build-from-source.md  deb-packages.md  quickstart.md  requirements.md  rpm-packages.md
docs/onboarding/: agent-mode.md  manual-mode.md  overview.md  ssh-pull-mode.md
docs/src/: sidebars.ts
docs/src/css/: custom.css
docs/tools/: bazel_build.mjs
internal/api/: BUILD.bazel  bodylimit.go  middleware.go  middleware_test.go  routes.go  server.go  web.go
internal/api/auth/: BUILD.bazel  middleware.go  middleware_test.go
internal/api/v1/: BUILD.bazel
internal/api/webutil/: BUILD.bazel  client_ip.go  json.go  parse.go  proto.go  validate.go
internal/cli/: BUILD.bazel  main.go  migrate.go  serve.go  version.go
internal/config/: BUILD.bazel  api.go  config.go  database.go  ssh.go  ssl.go  viper.go
internal/di/: BUILD.bazel  injector.go
internal/events/: BUILD.bazel  bus.go  bus_test.go  events.go
internal/mailer/: BUILD.bazel  interface.go  mailer.go
internal/mailer/templates/: report.html.tmpl  report.txt.tmpl
internal/migrations/: BUILD.bazel  migrate.go
internal/migrations/files/: 001_add_settings.sql  002_add_users.sql  003_add_hosts.sql  004_create_host_ssh_pull.sql  005_add_host_ssh_pull_jobs.sql  006_advisory_scopes.sql  007_add_onboarded_to_host_ssh_pull.sql  008_add_matcher_tables.sql  009_add_advisory_references_cve_idx.sql  010_add_manual_onboarding.sql  011_add_pull_hostname_to_host_ssh_pull.sql  012_dedupe_decision_records.sql  013_add_default_ssh_pull_user_setting.sql  014_backfill_ubuntu_severities.sql  015_add_ask_to_copy_public_key_setting.sql  016_add_host_unique_constraints.sql  017_add_audit_log.sql  018_add_registration_token_auto_approve.sql  019_add_host_notes.sql
internal/mock/: BUILD.bazel  mock_advisory_sync.go  mock_auth.go  mock_hosts.go  mock_mailer.go  mock_sql.go
internal/queue/: BUILD.bazel  advisory_sync_worker.go  advisory_sync_worker_test.go  email_report.go  noop_worker.go  periodic.go  periodic_test.go  river.go  ssh_pull_worker.go  ssh_pull_worker_test.go
internal/services/: BUILD.bazel  advisory_sync.go  advisory_sync_test.go  audit_log.go  auth.go  hosts.go  hosts_test.go  importer_test.go  periodic.go  settings.go  ssh_pull.go  ssh_pull_test.go
internal/services/matchers/: BUILD.bazel  matcher.go  matcher_debianver.go  matcher_integration_test.go  matcher_rpmver.go  matcher_streams.go  matcher_test.go
internal/sql/: BUILD.bazel  advisories.sql.go  advisory_product_streams.sql.go  advisory_references.sql.go  advisory_scopes.sql.go  affected_package_rules.sql.go  audit_log.sql.go  decision_records.sql.go  extra.go  fixed_packages.sql.go  host_access_tokens.sql.go  host_snapshots.sql.go  host_ssh_pull_jobs.sql.go  hosts.sql.go  injector.go  matcher.sql.go  models.go  product_streams.sql.go  querier.go  registration_tokens.sql.go  settings.sql.go  users.sql.go
internal/sql/id/: BUILD.bazel  id.go  id_test.go
internal/testing/: BUILD.bazel  backend.go  database.go  e2e_helpers.go  export_test_helpers.go  fixtures.go  http.go
internal/utils/: BUILD.bazel  collections.go  collections_test.go  crypto.go  crypto_test.go  log.go  option.go  option_test.go  password.go  password_test.go  random.go  ssh.go  strings.go
internal/ws/: BUILD.bazel  active_topics_test.go  errors.go  hub.go  hub_test.go
proto/: BUILD.bazel  defs.bzl
proto/agent/: BUILD.bazel  common.pb.go  common.pb.validate.go  common.proto  go.mod  go.sum  host.pb.go  host.pb.validate.go  host.proto  package.pb.go  package.pb.validate.go  package.proto  repo.pb.go  repo.pb.validate.go  repo.proto  runtime.pb.go  runtime.pb.validate.go  runtime.proto  snapshot.pb.go  snapshot.pb.validate.go  snapshot.proto
(+188 files in other folders)
