load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//:version.bzl", "VERSION")
load("//third_party/bazel:archs.bzl", "LINUX_ARCHES")

# gazelle:prefix go.patchbase.net/server
# gazelle:proto disable
# gazelle:go_test file

gazelle(
    name = "gazelle",
    args = [
        "advisories",
        "agent",
        "dashboard",
        ".",
    ],
)

string_flag(
    name = "image_registry",
    build_setting_default = "ghcr.io",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "image_repository",
    build_setting_default = "patchbase/patchbase",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "image_tag",
    build_setting_default = VERSION,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "config_example",
    srcs = ["config.example.yaml"],
    visibility = ["//visibility:public"],
)

RELEASE_VERSION = VERSION[1:] if VERSION.startswith("v") else VERSION

write_file(
    name = "dist_sh",
    out = "dist.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        "cd \"$BUILD_WORKSPACE_DIRECTORY\"",
        "rm -rf dist",
        "mkdir -p dist/binaries dist/rpm dist/deb",
    ] + [
        "cp bazel-bin/cmd/patchbase-server/patchbase-server_linux_{name} dist/binaries/patchbase-server-linux-{name}".format(name = arch["name"])
        for arch in LINUX_ARCHES
    ] + [
        "cp bazel-bin/agent/cmd/patchbase-agent/patchbase-agent_linux_{name} dist/binaries/patchbase-agent-linux-{name}".format(name = arch["name"])
        for arch in LINUX_ARCHES
    ] + [
        "cp bazel-bin/agent/cmd/patchbase-agent/patchbase-agent-{name}-{version}-1.{name}.rpm dist/rpm/patchbase-agent-{version}-1.{name}.rpm".format(
            name = arch["name"],
            version = RELEASE_VERSION,
        )
        for arch in LINUX_ARCHES
    ] + [
        "cp bazel-bin/cmd/patchbase-server/patchbase-server-{name}-{version}-1.{name}.rpm dist/rpm/patchbase-server-{version}-1.{name}.rpm".format(
            name = arch["name"],
            version = RELEASE_VERSION,
        )
        for arch in LINUX_ARCHES
    ] + [
        "cp bazel-bin/cmd/patchbase-server/patchbase-server_{arch}.deb dist/deb/patchbase-server_{version}-1_{arch}.deb".format(
            arch = arch["goarch"],
            version = RELEASE_VERSION,
        )
        for arch in LINUX_ARCHES
    ] + [
        "cp bazel-bin/agent/cmd/patchbase-agent/patchbase-agent_{arch}.deb dist/deb/patchbase-agent_{version}-1_{arch}.deb".format(
            arch = arch["goarch"],
            version = RELEASE_VERSION,
        )
        for arch in LINUX_ARCHES
    ],
    is_executable = True,
)

sh_binary(
    name = "dist",
    srcs = [":dist_sh"],
    data = [
    ] + [
        "//cmd/patchbase-server:patchbase-server_linux_{name}".format(name = arch["name"])
        for arch in LINUX_ARCHES
    ] + [
        "//agent/cmd/patchbase-agent:patchbase-agent_linux_{name}".format(name = arch["name"])
        for arch in LINUX_ARCHES
    ] + [
        "//agent/cmd/patchbase-agent:patchbase-agent-{name}".format(name = arch["name"])
        for arch in LINUX_ARCHES
    ] + [
        "//cmd/patchbase-server:patchbase-server-{name}".format(name = arch["name"])
        for arch in LINUX_ARCHES
    ] + [
        "//cmd/patchbase-server:patchbase-server-deb-{name}".format(name = arch["name"])
        for arch in LINUX_ARCHES
    ] + [
        "//agent/cmd/patchbase-agent:patchbase-agent-deb-{name}".format(name = arch["name"])
        for arch in LINUX_ARCHES
    ],
)

write_file(
    name = "coverage_report_sh",
    out = "coverage_report.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        "cd \"$BUILD_WORKSPACE_DIRECTORY\"",
        "echo 'Running bazel coverage...'",
        "bazel coverage --combined_report=lcov //internal/...",
        "echo 'Processing coverage data...'",
        "sed 's|^SF:|SF:'\"$BUILD_WORKSPACE_DIRECTORY\"'/|' bazel-out/_coverage/_coverage_report.dat > abs_coverage.dat",
        "rm -rf bazel-coverage-report",
        "genhtml abs_coverage.dat -o bazel-coverage-report --prefix \"$BUILD_WORKSPACE_DIRECTORY\"",
        "rm abs_coverage.dat",
        "echo 'Coverage report generated in bazel-coverage-report/'",
    ],
    is_executable = True,
)

sh_binary(
    name = "coverage_report",
    srcs = [":coverage_report_sh"],
)

command(
    name = "buildifier_check",
    arguments = [
        "--lint=warn",
        "--mode=check",
        "-r",
        ".",
    ],
    command = "//third_party/buildifier",
)

command(
    name = "buildifier_format",
    arguments = [
        "--lint=warn",
        "-r",
        ".",
    ],
    command = "//third_party/buildifier",
)

command(
    name = "golangci-lint",
    arguments = [
        "--config=.golangci.yml",
        "./...",
    ],
    command = "//third_party/golangci-lint",
)

multirun(
    name = "lint",
    testonly = True,
    commands = [
        ":buildifier_check",
        # ":golangci-lint",
        "//dashboard:format_check",
        "//dashboard:lint_check",
    ],
    jobs = 1,
)

multirun(
    name = "format",
    testonly = True,
    commands = [
        ":buildifier_format",
        "//dashboard:format",
        "//dashboard:lint",
    ],
    jobs = 1,
)
