bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.51.0", repo_name = "bazel_gazelle")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.8.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "protobuf", version = "34.1")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)

###############################################################################
# Go
###############################################################################
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.10")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
go_deps.gazelle_default_attributes(
    build_file_generation = "on",
    directives = [
        "gazelle:go_test file",
        "gazelle:proto disable",
    ],
)
use_repo(
    go_deps,
    "com_github_go_testfixtures_testfixtures_v3",
    "com_github_golang_jwt_jwt_v5",
    "com_github_jackc_pgerrcode",
    "com_github_jackc_pgx_v5",
    "com_github_matoous_go_nanoid_v2",
    "com_github_pressly_goose_v3",
    "com_github_riverqueue_river",
    "com_github_riverqueue_river_riverdriver_riverdatabasesql",
    "com_github_riverqueue_river_riverdriver_riverpgxv5",
    "com_github_samber_do_v2",
    "com_github_spf13_afero",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
)

###############################################################################
# Development dependencies
###############################################################################
sqlc = use_extension("//third_party/bzlmod:deps.bzl", "sqlc")
use_repo(sqlc, "sqlc")
