bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.1.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.51.0", repo_name = "bazel_gazelle")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_img", version = "0.3.11")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.8.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "protoc-gen-validate", version = "1.3.3")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)

###############################################################################
# Go
###############################################################################
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.11")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
go_deps.gazelle_default_attributes(
    build_file_generation = "on",
    directives = [
        "gazelle:go_test file",
        "gazelle:proto disable",
    ],
)
use_repo(
    go_deps,
    "com_github_go_testfixtures_testfixtures_v3",
    "com_github_golang_jwt_jwt_v5",
    "com_github_jackc_pgerrcode",
    "com_github_jackc_pgx_v5",
    "com_github_matoous_go_nanoid_v2",
    "com_github_pressly_goose_v3",
    "com_github_riverqueue_river",
    "com_github_riverqueue_river_riverdriver_riverdatabasesql",
    "com_github_riverqueue_river_riverdriver_riverpgxv5",
    "com_github_riverqueue_river_rivertype",
    "com_github_samber_do_v2",
    "com_github_spf13_afero",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_modernc_sqlite",
)

###############################################################################
# Node.js
###############################################################################
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "24.14.1")
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(pnpm_version_from = "//dashboard:package.json")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    custom_postinstalls = {
        "@sveltejs/kit": """
        set -eu
        mkdir -p 'src/types/synthetic'
        printf '%s\n' 'Private environment variables statically injected at build time.' > 'src/types/synthetic/$env+static+private.md'
        printf '%s\n' 'Public environment variables statically injected at build time.' > 'src/types/synthetic/$env+static+public.md'
        printf '%s\n' 'Private environment variables available at runtime.' > 'src/types/synthetic/$env+dynamic+private.md'
        printf '%s\n' 'Public environment variables available at runtime.' > 'src/types/synthetic/$env+dynamic+public.md'
        printf '%s\n' 'SvelteKit app types.' > 'src/types/synthetic/$app+types.md'
        printf '%s\n' 'The $lib alias.' > 'src/types/synthetic/$lib.md'
        """,
    },
    lifecycle_hooks = {
        "*": [],
    },
    npmrc = "//dashboard:.npmrc",
    pnpm_lock = "//dashboard:pnpm-lock.yaml",
)
use_repo(npm, "npm")

###############################################################################
# Development dependencies
###############################################################################
sqlc = use_extension("//third_party/bzlmod:deps.bzl", "sqlc")
use_repo(sqlc, "sqlc")
