load("@bazel_gazelle//:def.bzl", "gazelle")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_go//go:def.bzl", "go_library")

# gazelle:prefix go.patchbase.net/dashboard
# gazelle:proto disable
# gazelle:go_test file

gazelle(
    name = "gazelle",
)

npm_link_all_packages(
    name = "node_modules",
)

js_binary(
    name = "dashboard_build_tool",
    entry_point = "tools/bazel_build.mjs",
    data = [":node_modules"],
)

js_run_binary(
    name = "build_dashboard_assets",
    tool = ":dashboard_build_tool",
    chdir = package_name(),
    srcs = glob([
        "src/**",
        "static/**",
    ]) + [
        ":node_modules",
        "package.json",
        "pnpm-lock.yaml",
        ".npmrc",
        "svelte.config.js",
        "tools/bazel_build.mjs",
        "tsconfig.json",
        "vite.config.ts",
    ],
    out_dirs = [
        "build",
        ".svelte-kit",
    ],
    execution_requirements = {"no-sandbox": "1"},
)

filegroup(
    name = "static",
    srcs = [":build_dashboard_assets"],
)

go_library(
    name = "dashboard",
    srcs = ["embed.go"],
    # keep: managed manually; gazelle cannot merge filegroup/glob embedsrcs here.
    embedsrcs = [":static"],
    importpath = "go.patchbase.net/dashboard",
    visibility = ["//visibility:public"],
)
