load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_go//go:def.bzl", "go_library")
load(":defs.bzl", "exec_filegroup")

# gazelle:prefix go.patchbase.net/dashboard
# gazelle:proto disable
# gazelle:go_test file

gazelle(
    name = "gazelle",
)

npm_link_all_packages(
    name = "node_modules",
)

js_binary(
    name = "dashboard_build_tool",
    data = [":node_modules"],
    entry_point = "tools/bazel_build.mjs",
)

js_run_binary(
    name = "build_dashboard_assets",
    srcs = glob([
        "src/**",
        "static/**",
    ]) + [
        ".npmrc",
        "package.json",
        "pnpm-lock.yaml",
        "svelte.config.js",
        "tools/bazel_build.mjs",
        "tsconfig.json",
        "vite.config.ts",
        ":node_modules",
    ],
    chdir = package_name(),
    execution_requirements = {"no-sandbox": "1"},
    out_dirs = [
        "build",
        ".svelte-kit",
    ],
    tool = ":dashboard_build_tool",
)

exec_filegroup(
    name = "static",
    src = ":build_dashboard_assets",
)

go_library(
    name = "dashboard",
    srcs = ["embed.go"],
    # keep: managed manually; gazelle cannot merge filegroup/glob embedsrcs here.
    embedsrcs = [":static"],
    importpath = "go.patchbase.net/dashboard",
    visibility = ["//visibility:public"],
)
