load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":defs.bzl", "exec_filegroup")

# gazelle:prefix go.patchbase.net/dashboard
# gazelle:proto disable
# gazelle:go_test file

gazelle(
    name = "gazelle",
)

npm_link_all_packages(
    name = "node_modules",
)

js_binary(
    name = "dashboard_build_tool",
    data = [":node_modules"],
    entry_point = "tools/bazel_build.mjs",
)

js_run_binary(
    name = "build_dashboard_assets",
    srcs = glob([
        "src/**",
        "static/**",
    ]) + [
        ".npmrc",
        "package.json",
        "pnpm-lock.yaml",
        "svelte.config.js",
        "tools/bazel_build.mjs",
        "tsconfig.json",
        "vite.config.ts",
        ":node_modules",
    ],
    chdir = package_name(),
    execution_requirements = {"no-sandbox": "1"},
    out_dirs = [
        "build",
        ".svelte-kit",
    ],
    tool = ":dashboard_build_tool",
)

exec_filegroup(
    name = "static",
    src = ":build_dashboard_assets",
)

go_library(
    name = "dashboard",
    srcs = ["embed.go"],
    # keep: managed manually; gazelle cannot merge filegroup/glob embedsrcs here.
    embedsrcs = [":static"],
    importpath = "go.patchbase.net/dashboard",
    visibility = ["//visibility:public"],
)

write_file(
    name = "format_check_sh",
    out = "format_check.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        "cd dashboard",
        "TMP_DIR=$(mktemp -d)",
        "trap 'rm -rf \"$TMP_DIR\"' EXIT",
        "cp -rL src \"$TMP_DIR/src\"",
        "cp -rL static \"$TMP_DIR/static\"",
        "cp -L package.json \"$TMP_DIR/package.json\"",
        "cp -L tsconfig.json \"$TMP_DIR/tsconfig.json\"",
        "cp -L vite.config.ts \"$TMP_DIR/vite.config.ts\"",
        "cp -L svelte.config.js \"$TMP_DIR/svelte.config.js\"",
        "cp -L .oxfmtrc.json \"$TMP_DIR/.oxfmtrc.json\"",
        "node node_modules/oxfmt/bin/oxfmt --check \"$TMP_DIR\"",
    ],
)

sh_test(
    name = "format_check",
    size = "small",
    srcs = ["format_check.sh"],
    data = glob([
        "src/**",
        "static/**",
        "*.ts",
        "*.js",
        "*.json",
        ".oxfmtrc.json",
    ]) + [
        ":node_modules",
    ],
)

write_file(
    name = "format_sh",
    out = "format.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        "if [ -n \"${BUILD_WORKSPACE_DIRECTORY:-}\" ]; then",
        "  cd \"$BUILD_WORKSPACE_DIRECTORY/dashboard\"",
        "else",
        "  echo \"Error: This target must be run via 'bazel run'\" >&2",
        "  exit 1",
        "fi",
        "exec node node_modules/oxfmt/bin/oxfmt --write .",
    ],
)

sh_binary(
    name = "format",
    srcs = ["format.sh"],
    data = [
        ":node_modules",
    ],
)

write_file(
    name = "lint_check_sh",
    out = "lint_check.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        "cd dashboard",
        "TMP_DIR=$(mktemp -d)",
        "trap 'rm -rf \"$TMP_DIR\"' EXIT",
        "cp -rL src \"$TMP_DIR/src\"",
        "cp -rL static \"$TMP_DIR/static\"",
        "cp -L package.json \"$TMP_DIR/package.json\"",
        "cp -L tsconfig.json \"$TMP_DIR/tsconfig.json\"",
        "cp -L vite.config.ts \"$TMP_DIR/vite.config.ts\"",
        "cp -L svelte.config.js \"$TMP_DIR/svelte.config.js\"",
        "node node_modules/oxlint/bin/oxlint --deny-warnings \"$TMP_DIR\"",
    ],
)

sh_test(
    name = "lint_check",
    size = "small",
    srcs = ["lint_check.sh"],
    data = glob([
        "src/**",
        "static/**",
        "*.ts",
        "*.js",
        "*.json",
    ]) + [
        ":node_modules",
    ],
)

write_file(
    name = "lint_sh",
    out = "lint.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        "if [ -n \"${BUILD_WORKSPACE_DIRECTORY:-}\" ]; then",
        "  cd \"$BUILD_WORKSPACE_DIRECTORY/dashboard\"",
        "else",
        "  echo \"Error: This target must be run via 'bazel run'\" >&2",
        "  exit 1",
        "fi",
        "exec node node_modules/oxlint/bin/oxlint --fix .",
    ],
)

sh_binary(
    name = "lint",
    srcs = ["lint.sh"],
    data = [
        ":node_modules",
    ],
)
